fix about section spacing

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -35,6 +35,7 @@
   .about__descriptions p {
     margin-top: 3rem;
     font-size: 1.8rem;
+    line-height: 3.5rem;
   }
 
   .about__contents {
@@ -61,10 +62,6 @@
   .line-three h4 {
     font-size: 1.8rem;
   }
-
-  /* .height {
-    height: 120px;
-  } */
 
   .projects__main-grid {
     grid-template-columns: 1fr 1fr 1fr;
@@ -130,6 +127,7 @@
 
   .about__descriptions p {
     margin-top: 3rem;
+    line-height: 3.5rem;
   }
 
   .about__contents {
@@ -144,10 +142,6 @@
   .skills__grid {
     grid-template-columns: 1fr 1fr;
   }
-
-  /* .height {
-    height: 120px;
-  } */
 
   .projects__main-grid {
     grid-template-columns: 1fr 1fr 1fr;
@@ -210,6 +204,7 @@
 
   .about__descriptions p {
     margin-top: 3rem;
+    line-height: 3.5rem;
   }
 
   .hero__text h6,
